Fix LMDB codec compile issues and add microbenchmark scaffold
Agent-Logs-Url: https://github.com/Flole998/openhab-addons/sessions/469666e4-1602-462c-aba0-016b05a3b42d

Co-authored-by: Flole998 <9951871+Flole998@users.noreply.github.com>